--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ edition = "2018"
 
 [dependencies]
 bson = "0.13"
-clap = "3.0.0-beta.2"
+clap = "2.33.3"
 config = "0.10.1"
 chrono = { version = "0.4.19", features =["serde"] }
 data-encoding = "2.3.1"
