--- a/ratelimit/Cargo.toml
+++ b/ratelimit/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[dev-dependencies]
+chrono = "0.4"
