--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,19 +21,19 @@ exclude = [
 edition = "2021"
 
 [dependencies]
-clap = { version = "3.0.14", features = ["cargo", "derive"] }
+clap = { version = "3.1.18", features = ["cargo", "derive"] }
 chrono = { version = "0.4.19", features = ["serde"] }
-config = "0.11.0"
+config = "0.13.1"
 derive_more = { version = "0.99.17", features = ["deref", "display"] }
-futures = "0.3.19"
-mongodb = { version = "2.1.0", default-features = false, features = ["async-std-runtime"] }
-openssl = { version = "0.10.38", features = ["vendored"] }
-rocket = { version = "0.5.0-rc.1", features = ["json", "secrets", "tls"] }
-serde = { version = "1.0.136", features = ["derive"] }
-strum = { version = "0.23.0", features = ["derive"] }
-thiserror = "1.0.30"
+futures = "0.3.21"
+mongodb = { version = "2.2.1", default-features = false, features = ["async-std-runtime"] }
+openssl = { version = "0.10.40", features = ["vendored"] }
+rocket = { version = "0.5.0-rc.2", features = ["json", "secrets", "tls"] }
+serde = { version = "1", features = ["derive"] }
+strum = { version = "0.24.0", features = ["derive"] }
+thiserror = "1"
 throttle = "0.1.0"
-uuid = { version = "1.0.0-alpha.1", features = ["v5"] }
+uuid = { version = "1.0.0", features = ["v5"] }
 
 [badges]
 travis-ci = { repository = "marirs/rocketapi" }
